# radar-strike

./: .gitmodules  CMakeLists.txt  README.md
data/: Thumbs.db
data/players/: leet.tga  sas.tga
data/shaders/gl3/: fragment.glsl  vertex.glsl
src/: astar.cpp  astar.h  font-icons.h  iinput.h  impl-headers.cpp  input.cpp  input.h  log.cpp  platform-opengl.h  platform.h  players.cpp  players.cpp.Q11896  players.h  program.cpp  sdl2-setup.cpp  sdl2-setup.h
src/ui/: gamemodes.h  ui.cpp  ui.h
tests/: test-astar.cpp  test-base.cpp  test-players.cpp
